objects/Bank_Common_Transaction_Archive__b.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Details__c</fullName>
        <label>Bank Details</label>
        <referenceTo>Bank_details__c</referenceTo>
        <relationshipLabel>Bank Common Transaction Archive Relationship</relationshipLabel>
        <relationshipName>Bank_Common_Transaction_Archive_Rel</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_analysis_txn__c</fullName>
        <label>Bank analysis txn</label>
        <referenceTo>Bank_analysis_txn__c</referenceTo>
        <relationshipLabel>Bank Common Transaction Archive Relationship</relationshipLabel>
        <relationshipName>Bank_Common_Transaction_Archive_Rel</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bank_transactionObjects__c</fullName>
        <label>Bank transactionObjects</label>
        <referenceTo>Bank_transactionObjects__c</referenceTo>
        <relationshipLabel>Bank Common Transaction Archive Relationship</relationshipLabel>
        <relationshipName>Bank_Common_Transaction_Archive_Rel</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>datex__c</fullName>
        <label>datex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <label>notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tag__c</fullName>
        <label>tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <label>text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timezone__c</fullName>
        <label>timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timezonetype__c</fullName>
        <label>timezonetype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank_Common_Transaction_Archive__b</label>
    <pluralLabel>Bank Common Transaction Archive</pluralLabel>
</CustomObject>